# ai-agents

./: .coverage 2  .env.example  .gitignore  AGENTS.md  Makefile  PRD.md  README.md  TESTING.md  Testing-Ian.md  main.py  pyproject.toml
taboo/: __main__.py  cli.py  game.py  human.py  player.py  types.py
taboo/agents/: __init__.py  buzzer.py  card_creator.py  cluer.py  guesser.py  judge.py
taboo/llm/: fakellm.py
taboo/scripts/: serverless_round.py
taboollm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cluer.py  test_game.py  test_judge.py  test_player.py  test_types.py
tests_1/: test_types.py
