[project]
name = "taboollm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.3",
    "pydantic>=2.7",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.22.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"