[project]
name = "taboollm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.3",
    "pydantic>=2.7",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
tool = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "pytest-cov>=5.0",
  "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taboo"]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-mock>=3.14.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pydantic>=2.7.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --cov=taboo --cov-report=term-missing"
